# navajo-chat

./: .bazelrc  .gitignore  LICENSE  README.md  WORKSPACE
clients/android/: BUILD.bazel  maven_dependencies.bzl  resolved_main_dependencies.bzl
clients/android/app/: AndroidManifest.xml  BUILD  BUILD.bazel  LaunchActivity.java  NavajoApplication.java
clients/android/app/res/drawable/: ic_navajo_splash_screen.xml
clients/android/app/res/layout/: main_activity.xml
clients/android/app/res/values/: styles.xml
clients/android/app/src/main/: AndroidManifest.xml
clients/android/app/src/main/res/values/: strings.xml
clients/android/main_deps/: BUILD.bazel  dependencies.bzl
clients/android/main_deps/androidx/activity/activity/: BUILD.bazel
clients/android/main_deps/androidx/annotation/annotation/: BUILD.bazel
clients/android/main_deps/androidx/appcompat/appcompat/: BUILD.bazel
clients/android/main_deps/androidx/arch/core/core-common/: BUILD.bazel
clients/android/main_deps/androidx/arch/core/core-runtime/: BUILD.bazel
clients/android/main_deps/androidx/asynclayoutinflater/asynclayoutinflater/: BUILD.bazel
clients/android/main_deps/androidx/collection/collection/: BUILD.bazel
clients/android/main_deps/androidx/constraintlayout/constraintlayout/: BUILD.bazel
clients/android/main_deps/androidx/constraintlayout/constraintlayout-solver/: BUILD.bazel
clients/android/main_deps/androidx/coordinatorlayout/coordinatorlayout/: BUILD.bazel
clients/android/main_deps/androidx/core/core/: BUILD.bazel
clients/android/main_deps/androidx/cursoradapter/cursoradapter/: BUILD.bazel
clients/android/main_deps/androidx/customview/customview/: BUILD.bazel
clients/android/main_deps/androidx/documentfile/documentfile/: BUILD.bazel
clients/android/main_deps/androidx/drawerlayout/drawerlayout/: BUILD.bazel
clients/android/main_deps/androidx/fragment/fragment/: BUILD.bazel
clients/android/main_deps/androidx/interpolator/interpolator/: BUILD.bazel
clients/android/main_deps/androidx/legacy/legacy-support-core-ui/: BUILD.bazel
clients/android/main_deps/androidx/legacy/legacy-support-core-utils/: BUILD.bazel
clients/android/main_deps/androidx/lifecycle/lifecycle-common/: BUILD.bazel
clients/android/main_deps/androidx/lifecycle/lifecycle-livedata/: BUILD.bazel
clients/android/main_deps/androidx/lifecycle/lifecycle-livedata-core/: BUILD.bazel
clients/android/main_deps/androidx/lifecycle/lifecycle-runtime/: BUILD.bazel
clients/android/main_deps/androidx/lifecycle/lifecycle-viewmodel/: BUILD.bazel
clients/android/main_deps/androidx/loader/loader/: BUILD.bazel
clients/android/main_deps/androidx/localbroadcastmanager/localbroadcastmanager/: BUILD.bazel
clients/android/main_deps/androidx/print/print/: BUILD.bazel
clients/android/main_deps/androidx/slidingpanelayout/slidingpanelayout/: BUILD.bazel
clients/android/main_deps/androidx/swiperefreshlayout/swiperefreshlayout/: BUILD.bazel
clients/android/main_deps/androidx/vectordrawable/vectordrawable/: BUILD.bazel
clients/android/main_deps/androidx/vectordrawable/vectordrawable-animated/: BUILD.bazel
clients/android/main_deps/androidx/versionedparcelable/versionedparcelable/: BUILD.bazel
clients/android/main_deps/androidx/viewpager/viewpager/: BUILD.bazel
clients/android/main_deps/com/google/errorprone/error_prone_annotations/: BUILD.bazel
clients/android/main_deps/com/google/guava/failureaccess/: BUILD.bazel
clients/android/main_deps/com/google/guava/guava/: BUILD.bazel
clients/android/main_deps/com/google/guava/listenablefuture/: BUILD.bazel
clients/android/main_deps/com/google/j2objc/j2objc-annotations/: BUILD.bazel
clients/android/main_deps/com/kohlschutter/junixsocket/junixsocket-common/: BUILD.bazel
clients/android/main_deps/com/kohlschutter/junixsocket/junixsocket-native-common/: BUILD.bazel
clients/android/main_deps/com/spotify/mobius/mobius-android/: BUILD.bazel
clients/android/main_deps/com/spotify/mobius/mobius-core/: BUILD.bazel
clients/android/main_deps/io/mockk/mockk/: BUILD.bazel
clients/android/main_deps/io/mockk/mockk-agent-api/: BUILD.bazel
clients/android/main_deps/io/mockk/mockk-agent-common/: BUILD.bazel
clients/android/main_deps/io/mockk/mockk-agent-jvm/: BUILD.bazel
clients/android/main_deps/io/mockk/mockk-common/: BUILD.bazel
clients/android/main_deps/io/mockk/mockk-dsl/: BUILD.bazel
clients/android/main_deps/io/mockk/mockk-dsl-jvm/: BUILD.bazel
clients/android/main_deps/javax/annotation/jsr250-api/: BUILD.bazel
clients/android/main_deps/log4j/log4j/: BUILD.bazel
clients/android/main_deps/net/bytebuddy/byte-buddy/: BUILD.bazel
clients/android/main_deps/net/bytebuddy/byte-buddy-agent/: BUILD.bazel
clients/android/main_deps/org/checkerframework/checker-compat-qual/: BUILD.bazel
clients/android/main_deps/org/jetbrains/annotations/: BUILD.bazel
clients/android/main_deps/org/objenesis/objenesis/: BUILD.bazel
clients/android/main_deps/org/reactivestreams/reactive-streams/: BUILD.bazel
clients/android/main_deps/org/scijava/native-lib-loader/: BUILD.bazel
clients/android/main_deps/org/slf4j/slf4j-api/: BUILD.bazel
clients/android/mobius/: BUILD
clients/android/mobius/src/: mobius.kt
clients/android/mobius/tests/: MobiusTests.kt
clients/android/parent/: BUILD.bazel
clients/android/theme/: AndroidManifest.xml  BUILD.bazel
clients/android/theme/res/layout/: activity_full_content.xml
clients/android/theme/res/values/: colors.xml  styles.xml
clients/android/welcome/bl/: BUILD.bazel
clients/android/welcome/bl/src/: WelcomeBL.kt
clients/android/welcome/bl/tests/: LoopTests.kt
clients/android/welcome/ui/: AndroidManifest.xml  BUILD.bazel  WelcomeActivity.java  WelcomeFragment.java
clients/android/welcome/ui/res/layout/: activity_main_welcome.xml  fragment_welcome.xml  what_is_navajo_1.xml  what_is_navajo_2.xml  what_is_navajo_3.xml
clients/android/welcome/ui/res/values/: strings.xml  styles.xml
tests/: BUILD.bazel  junit5.bzl  resolved_dependencies.bzl
tests/junit5_deps/: BUILD.bazel  dependencies.bzl
(+24 files in other folders)
