load(":resolved_dependencies.bzl", "generate_junit5_deps_transitive_dependency_rules")
generate_junit5_deps_transitive_dependency_rules()

load("//rules/maven_deps:maven_deps_workspace_generator.bzl", "deps_workspace_generator_rule")
load(":junit5.bzl", "JUNIT_MAVEN_DEPS")

deps_workspace_generator_rule(name = 'junit5_deps',
    maven_deps = JUNIT_MAVEN_DEPS,
    output_deps_file_path = 'tests/resolved_dependencies.bzl',
    rule_prefix = 'junit5',
    macro_prefix = 'junit5_deps')