
load("//tests/junit5_deps:dependencies.bzl", "generate_transitive_dependency_targets")
generate_transitive_dependency_targets()

load("@bazel_mvn_deps_rule//rules/maven_deps:maven_deps_workspace_generator.bzl", "deps_workspace_generator_rule")
load(":junit5.bzl", "JUNIT_MAVEN_DEPS")

deps_workspace_generator_rule(name = 'junit5_deps',
    maven_deps = JUNIT_MAVEN_DEPS,
    repositories = ['https://repo1.maven.org/maven2/'],
    generate_deps_sub_folder = False
)