load("//rules/maven_deps:maven_deps_workspace_generator.bzl", "deps_workspace_generator_rule")
load(":maven_dependencies.bzl", "ANDROID_MAIN_DEPENDENCIES")

# Regenerate resolved dependencies file: bazel run //clients/android:android_main_deps
deps_workspace_generator_rule(name = 'android_main_deps',
    maven_deps = ANDROID_MAIN_DEPENDENCIES,
    output_deps_file_path = 'clients/android/resolved_main_dependencies.bzl',
    deps_prefix = 'android_main___')