load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_import", "kt_jvm_library")

#load(":resolved_main_dependencies.bzl", "generate_android_main_transitive_dependency_rules")
#generate_android_main_transitive_dependency_rules(kt_jvm_import = kt_jvm_import, kt_jvm_library = kt_jvm_library)

load("//clients/android/main_deps:dependencies.bzl", generate_android_main_transitive_dependency_rules = "generate_transitive_dependency_targets")
generate_android_main_transitive_dependency_rules(kt_jvm_import = kt_jvm_import, kt_jvm_library = kt_jvm_library)

load("@bazel_mvn_deps_rule//rules/maven_deps:maven_deps_workspace_generator.bzl", "deps_workspace_generator_rule")
load(":maven_dependencies.bzl", "ANDROID_MAIN_DEPENDENCIES")

# Regenerate resolved dependencies file: bazel run //clients/android:android_main_deps
deps_workspace_generator_rule(name = 'main_deps',
    maven_deps = ANDROID_MAIN_DEPENDENCIES,
    repositories = [
                'https://maven.google.com/',
                'https://jcenter.bintray.com/',
                'https://repo1.maven.org/maven2/',
                'https://jitpack.io/',
            ],
    maven_exclude_deps = [
        'com.android.support'
    ],
)