android_binary(
    name = "app",
    visibility = ["//visibility:public"],
    manifest = "AndroidManifest.xml",
    srcs = glob(["**/*.java"]),
    custom_package = "net.evendanan.navajo",
    resource_files = glob(["res/**/*"]),
    deps = [
        "//clients/android/parent",
        "//clients/android/theme",
        "//clients/android:main_deps___androidx_appcompat__appcompat",
        "//clients/android/welcome/ui",
        "//clients/android:main_deps___androidx_annotation__annotation",
        "//clients/android:main_deps___com_github_menny_Chauffeur__permissions",
        "//clients/android:main_deps___androidx_fragment__fragment",
    ],
    manifest_values = {
        "versionCode" : "1",
        "versionName" : "v0.0.1",
        "minSdkVersion" : "19",
        "targetSdkVersion" : "28",
        "compileSdkVersion" : "28"
    }
)