
java_library(
    name = "parent",
    visibility = ['//visibility:public'],
    exports = [
        "//clients/android:android___com_google_guava__guava",
        "//clients/android:android___com_google_code_findbugs__jsr305",
        "//clients/android:android___javax_annotation__jsr250_api",
        
#        "//clients/android:android___io_reactivex_rxjava2__rxjava",
#        "//clients/android:android___com_spotify_mobius__mobius_core",
#        "//clients/android:android___com_spotify_mobius__mobius_rx2",
#        "//clients/android:android___com_spotify_mobius__mobius_extras",
                        
    ]
)

#android_library(
#    name = "parent-android",
#    visibility = ['//visibility:public'],
#    exports = [
#        ":parent-java",
#
#        "//clients/android:android___com_github_menny_Chauffeur__permissions",
#
#        "//clients/android:android___androidx_fragment__fragment",
#        "//clients/android:android___androidx_appcompat__appcompat",
#        "//clients/android:android___androidx_annotation__annotation",
#
#        "//clients/android:android___io_reactivex_rxjava2__rxandroid",
#
#        "//clients/android:android___com_spotify_mobius__mobius_android",
#    ],
#)