
java_library(
    name = "parent",
    visibility = ['//visibility:public'],
    exports = [
        "//clients/android:main_deps___com_google_guava__guava",
        "//clients/android:main_deps___com_google_code_findbugs__jsr305",
        "//clients/android:main_deps___javax_annotation__jsr250_api",
        
#        "//clients/android:main_deps___io_reactivex_rxjava2__rxjava",
#        "//clients/android:main_deps___com_spotify_mobius__mobius_core",
#        "//clients/android:main_deps___com_spotify_mobius__mobius_rx2",
#        "//clients/android:main_deps___com_spotify_mobius__mobius_extras",
                        
    ]
)

#android_library(
#    name = "parent-android",
#    visibility = ['//visibility:public'],
#    exports = [
#        ":parent-java",
#
#        "//clients/android:main_deps___com_github_menny_Chauffeur__permissions",
#
#        "//clients/android:main_deps___androidx_fragment__fragment",
#        "//clients/android:main_deps___androidx_appcompat__appcompat",
#        "//clients/android:main_deps___androidx_annotation__annotation",
#
#        "//clients/android:main_deps___io_reactivex_rxjava2__rxandroid",
#
#        "//clients/android:main_deps___com_spotify_mobius__mobius_android",
#    ],
#)