load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_library")
load("//tests:junit5.bzl", "kt_junit5_test")

kt_jvm_library(
    name = "bl",
    visibility = ["//visibility:public"],
    srcs = glob(["src/**/*.kt"]),
    deps = [
        "//clients/android/mobius",
    ],
)

kt_junit5_test(
    name = "bl_test",
    friends = [":bl"],
    visibility = ["//visibility:public"],
    srcs = ["tests/LoopTests.kt"],
    test_class = "net.evendanan.navajo.welcome.bl.tests.LoopTests",
    deps = ["//clients/android:main_deps___com_spotify_mobius__mobius_core"]
)