android_library(
    name = "ui",
    srcs = glob(['**/*.java']),
    deps = [
        "//clients/android/parent",
        "//clients/android:android___androidx_annotation__annotation",
        "//clients/android:android___com_github_menny_Chauffeur__permissions",
        "//clients/android:android___androidx_fragment__fragment",
        "//clients/android:android___androidx_appcompat__appcompat",
    ],
    custom_package = "net.evendanan.navajo.welcome.ui",
    resource_files = glob(["res/**/*.xml"]),
    manifest = "AndroidManifest.xml",
    visibility = ["//visibility:public"]
)